fix(POST /groceries): automatically nil-ify CreatedAt and UpdatedAt for convenience
